--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@ code {
 
 h1 {
   text-transform: uppercase;
-  font-size: 2.8rem;
+  font-size: 2.6rem;
   letter-spacing: 8px;
   margin-top: 200px;
   margin-bottom: 20px;
@@ -209,7 +209,6 @@ display: none;
 }
 .speakers:hover {
   width: 120%;
-  /* position: absolute; */
 }
 .speakRight{
   margin-top: 97px;
@@ -414,4 +413,38 @@ display: none;
 
 .border{
   border: 1px solid crimson;
+}
+.leftSpCnt{
+  position: relative;
+}
+.play{
+  position: absolute;
+  color: rgba(214, 214, 214, 0.74);
+  top: 20px;
+  right: 30px;
+  cursor: pointer;
+  z-index: 1000;
+}
+.speakerCntnr{
+  position: relative;
+}
+.clickToPlay{
+  cursor: pointer;
+  width: 120px;
+  height: 120px;
+  border: 2px solid white;
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  bottom: 50px;
+  right: 50%;
+  opacity: 0;
+  transition: all ease .6s;
+}
+.speakerCntnr:hover .clickToPlay{
+  opacity: .5;
 }
